--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,11 @@
 
 
 /* show blocks */
-/*
+
 *:hover {
     outline:1px blue solid;
 }
-*/
+
 
 /* base style */
 
@@ -60,30 +60,24 @@ a:active {
 
 /* header */
 .s-header {
-    position: absolute;
-    top: 2rem;
+    position: fixed;
+    top: 0;
     left: 0;
     width: 100%;
     height: 78px;
     text-align: center;
     z-index: 100;
+    background-color: #050505;
 }
 
-.s-header.sticky {
-    background-color: #050505;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
 
 /* header logo */
 
 .header-logo {
     display: inline-block;
     padding: 0;
-    transform: translate3d(0, -50%, 0);
     position: absolute;
-    top: 35%;
+    top: 0;
     left: 40px;
 }
 
@@ -356,9 +350,10 @@ a:active {
  * ------------------------------------------------------------------- */
 .s-intro {
     width: 100%;
-    height: 90%;
+    height: 100%;
     min-height: 500px;
     background-color: #050505;
+    padding-bottom: 10vh;
 }
 
 .intro-content {
@@ -588,4 +583,66 @@ a:active {
         font-size: 3.5rem;
     }
 
+}
+
+/*
+about
+ */
+
+.s-about {
+    background-color: #ffffff;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+}
+
+.about-content {
+    max-width: 1140px;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative;
+
+}
+
+.table-responsive {
+    width: 100%;
+}
+
+/* -------------------------------------------------------------------
+ * ## tables
+ * ------------------------------------------------------------------- */
+table {
+    border-width: 0;
+    width: 100%;
+    max-width: 100%;
+    font-family: "Lora", serif;
+    border-collapse: collapse;
+}
+
+th,
+td {
+    padding: 1.5rem 3.2rem;
+    text-align: left;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+th {
+    color: #000000;
+    font-family: "Lora", serif;
+    font-weight: 700;
+}
+
+th:first-child,
+td:first-child {
+    padding-left: 0;
+}
+
+th:last-child,
+td:last-child {
+    padding-right: 0;
+}
+
+.table-responsive {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
 }
