--- a/css/base.css
+++ b/css/base.css
@@ -97,7 +97,8 @@ a img {
 /* columns
  * -------------------------------------- */
 .column {
-	flex: 1 1 0;
+	flex: 1;
+	align-self: flex-start;
 	padding: 0 20px;
 }
 
