--- a/css/base.css
+++ b/css/base.css
@@ -206,26 +206,12 @@ a img {
 
 }
 
-/* ------------------------------------------------------------------- 
- * ## small mobile devices <= 400px
- * ------------------------------------------------------------------- */
 @media screen and (max-width:400px) {
-	.row .row {
-		margin-left: 0;
-		margin-right: 0;
+	.row {
+		width: auto;
+		padding-left: 2px;
+		padding-right: 2px;
 	}
-
-	.column {
-		-webkit-flex: 0 0 100%;
-		-ms-flex: 0 0 100%;
-		flex: 0 0 100%;
-		max-width: 100%;
-		width: 100%;
-		margin-left: 0;
-		margin-right: 0;
-		padding: 0;
-	}
-
 }
 
 
