--- a/css/styles.css
+++ b/css/styles.css
@@ -539,12 +539,11 @@ a:active {
     }
 
     .intro-text {
-        -webkit-transform: translate3d(0, -4.8rem, 0);
         transform: translate3d(0, -4.8rem, 0);
     }
 
     .intro-text h1 {
-        font-size: 4rem;
+        font-size: 3.5rem;
     }
 
     .intro-scroll {
@@ -560,14 +559,14 @@ a:active {
     }
 
     .intro-text h1 {
-        font-size: 4rem;
+        font-size: 3rem;
     }
 
 }
 
 @media screen and (max-width:350px) {
     .intro-text h1 {
-        font-size: 3.5rem;
+        font-size: 2.5rem;
     }
 
 }
@@ -637,6 +636,18 @@ about
     }
 }
 
+@media screen and (max-width:600px) {
+    .table-responsive {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width:400px) {
+    .table-responsive {
+        font-size: 0.8rem;
+    }
+}
+
 /*
 services
  */
@@ -656,7 +667,7 @@ services
 .services-text h1 {
     font-size: 7rem;
     font-weight: 500;
-    line-height: 0.5;
+    line-height: 7rem;
     color: #ffffff;
     margin-top: 0;
 }
@@ -664,12 +675,14 @@ services
 @media screen and (max-width:1024px) {
     .services-text h1 {
         font-size: 5.5rem;
+        line-height: 5.5rem;
     }
 }
 
 @media screen and (max-width:800px) {
     .services-text h1 {
-        font-size: 4rem;
+        font-size: 3.5rem;
+        line-height: 3.5rem;
     }
 }
 
